--- a/index.html
+++ b/index.html
@@ -16,33 +16,47 @@
     <header class="header-1">
       <nav class="nav-left-1">
         <div class="box hamburger-logo"><i class="fa-solid fa-bars"></i></div>
-        <div class="box logo"></div>
-        <div class="box israel">
+        <div class="box-2 logo"></div>
+        <div class="box-2 israel">
           <span class="info-top">Delivery to</span>
           <br />
           <span class="info-bottom delivery">Israel</span>
         </div>
-        <div class="box search">
-          <div class="box search-in">
-            <select name="all" id="all">
-              <option value="All">All</option>
-            </select>
-            <textarea name="message" id="message"></textarea>
-            <button type="submit" class="btn-search">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-          </div>
-        </div>
+        <!-- <div class="box search"> -->
+        <!-- <div class="box search-in">
+          <select name="all" id="all">
+            <option value="All">All</option>
+          </select>
+           <span class="blank">blank</span> -->
+        <!-- <textarea name="message" id="message"></textarea> -->
+
+        <!-- <input type="text" id="text" /> -->
+        <!-- <button type="submit" class="btn-search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </div> -->
+        <!-- </div> -->
       </nav>
+      <div class="box search-in">
+        <select name="all" id="all">
+          <option value="All">All</option>
+        </select>
+        <!-- <span class="blank">blank</span> -->
+        <textarea name="message" id="message"></textarea>
+
+        <!-- <input type="text" id="text" /> -->
+        <button type="submit" class="btn-search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </div>
       <nav class="nav-right-1">
-        <div class="box langu">
+        <div class="box-2 langu">
           <img src="/Assets/img/united-states.png" class="flag-photo" />
           <span class="info-langu">EN</span>
           <span><i class="fa-solid fa-caret-down"></i></span>
         </div>
-        <div class="box account">
+        <div class="box-2 account">
           <span class="info-small">Hello,sign in</span>
-
           <br />
           <span class="info-large"
             >Account & Lists <i class="fa-solid fa-caret-down"></i
@@ -52,12 +66,12 @@
             ><i class="fa-regular fa-user"></i
           ></span>
         </div>
-        <div class="box orders">
+        <div class="box-2 orders">
           <span class="info-small">Returns</span>
           <br />
           <span class="info-large"> & Orders</span>
         </div>
-        <div class="box cart">
+        <div class="box-2 cart">
           <span class="item-number">1</span>
           <div class="cart-icon"></div>
           <span class="info-cart-bottom">Cart</span>
@@ -101,7 +115,6 @@
         </div>
         <div class="logos-2">
           <div class="box-1">
-            <!-- <span>Sign in</span> -->
             <span class="sign-in"
               >Sign in<i class="fa-solid fa-chevron-right"></i
               ><i class="fa-regular fa-user"></i
