navbar_for_desktop_with_styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="header-1">
       <nav class="nav-left-1">
         <div class="box hamburger-logo"><i class="fa-solid fa-bars"></i></div>
-        <div class="box-2 logo"></div>
+        <div class="box-2 logo-contanier">
+          <div class="logo"></div>
+        </div>
         <div class="box-2 israel">
           <span class="info-top">Delivery to</span>
           <br />
@@ -37,14 +39,19 @@
         </div> -->
         <!-- </div> -->
       </nav>
-      <div class="box search-in">
+      <div class="box-3 search-in">
         <select name="all" id="all">
           <option value="All">All</option>
+          <option>Art & Craft</option>
+          <option>Baby</option>
+          <option>Book</option>
+          <option>Boy`s fashoin</option>
         </select>
+        <!-- <i class="fa-solid fa-caret-down"></i> -->
         <!-- <span class="blank">blank</span> -->
-        <textarea name="message" id="message"></textarea>
+        <!-- <textarea name="message" id="message"></textarea> -->
 
-        <!-- <input type="text" id="text" /> -->
+        <input type="text" id="text" />
         <button type="submit" class="btn-search">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
@@ -78,30 +85,30 @@
         </div>
       </nav>
     </header>
-    <header class="header-2 box">
+    <header class="header-2">
       <nav class="nav-left-2">
-        <div class="box">
+        <div class="box-4">
           <span><i class="fa-solid fa-bars"></i> All</span>
         </div>
-        <div class="box">
-          <span>Today`s Deals</span>
+        <div class="box-4">
+          <span class="light-text">Today`s Deals</span>
         </div>
-        <div class="box">
-          <span>Customer Service</span>
+        <div class="box-4">
+          <span class="light-text">Customer Service</span>
         </div>
-        <div class="box">
-          <span>Register</span>
+        <div class="box-4">
+          <span class="light-text">Register</span>
         </div>
-        <div class="box">
-          <span>Gift Cards</span>
+        <div class="box-4">
+          <span class="light-text">Gift Cards</span>
         </div>
-        <div class="box">
-          <span>Sell</span>
+        <div class="box-4">
+          <span class="light-text">Sell</span>
         </div>
       </nav>
       <nav class="nav-right-2">
-        <div class="box">
-          <span>Shop great deals now</span>
+        <div class="box-4">
+          <span>Shop great deals in Electronics</span>
         </div>
       </nav>
     </header>
