--- a/index.html
+++ b/index.html
@@ -24,20 +24,6 @@
           <br />
           <span class="info-bottom delivery">Israel</span>
         </div>
-        <!-- <div class="box search"> -->
-        <!-- <div class="box search-in">
-          <select name="all" id="all">
-            <option value="All">All</option>
-          </select>
-           <span class="blank">blank</span> -->
-        <!-- <textarea name="message" id="message"></textarea> -->
-
-        <!-- <input type="text" id="text" /> -->
-        <!-- <button type="submit" class="btn-search">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-        </div> -->
-        <!-- </div> -->
       </nav>
       <div class="box-3 search-in">
         <select name="all" id="all">
@@ -47,10 +33,6 @@
           <option>Book</option>
           <option>Boy`s fashoin</option>
         </select>
-        <!-- <i class="fa-solid fa-caret-down"></i> -->
-        <!-- <span class="blank">blank</span> -->
-        <!-- <textarea name="message" id="message"></textarea> -->
-
         <input type="text" id="text" />
         <button type="submit" class="btn-search">
           <i class="fa-solid fa-magnifying-glass"></i>
@@ -118,13 +100,13 @@
       <div class="contanier">
         <div class="logos">
           <div class="box-1"><i class="fa-solid fa-bars"></i></div>
-          <div class="box-1 logo"></div>
+          <div class="box-1 logo-mobile"></div>
         </div>
         <div class="logos-2">
           <div class="box-1">
             <span class="sign-in"
-              >Sign in<i class="fa-solid fa-chevron-right"></i
-              ><i class="fa-regular fa-user"></i
+              >Sign in <i class="fa-solid fa-chevron-right"></i>
+              <i class="fa-regular fa-user"></i
             ></span>
           </div>
           <div class="box-1">
@@ -134,10 +116,12 @@
         </div>
       </div>
       <div class="box-1 serach-box">
-        <textarea name="message-1" id="message-1"></textarea>
-        <button type="submit" class="btn-search-1">
+        <!-- <div class="conatnier-search"> -->
+        <input type="text" id="text-mobile" placeholder=" Search Amazon" />
+        <button type="submit" class="btn-search-mobile">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
+        <!-- </div> -->
       </div>
       <div class="box-1 delivery-israel">
         <span class="location-icon"></span>
