--- a/index.html
+++ b/index.html
@@ -128,5 +128,61 @@
         <span class="dlivery-details-mobile">Delivery to Israel</span>
       </div>
     </header>
+    <!-- /*********************SRCTION-1-SHORT-GREY-LINE************************/ -->
+    <section class="section-1">
+      <div class="box-section-1">
+        <a href="#" class="span-section-1 toys">Toys & Games</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Holiday Toy List</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Shop Toys by Characters</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Shop Best Selling Toys</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Shop Newly Released Toys</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Shop Amazon Exclusive Toys</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Shop Toy Deals</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Creat a Birthday Gift List</a>
+      </div>
+      <div class="box-section-1">
+        <a href="#" class="span-section-1">Creat a Holiday Gift List</a>
+      </div>
+    </section>
+
+    <!-- /**************************section-2************************/ -->
+    <section class="section-2">
+      <div class="small-photo">
+        <img src="/Assets/img/little_fox.png" />
+      </div>
+      <div class="middle-text">
+        <span
+          >WILD REPUBLIC Fennex Fox Plush, Stuffed Animal, Plush Toy, Gifts for
+          Kids, Cuddlenkins 8"
+        </span>
+      </div>
+      <div class="left-section-2">
+        <div class="stars-numbers">
+          <img src="/Assets/img/stras_numbers.png" />
+        </div>
+        <div class="price-section-2">
+          <span class="dollar"> &dollar; </span>
+          <span class="big-amount"> 13</span>
+          <span class="small-amount"> 99 </span>
+        </div>
+        <div class="prime-logo-section-2">
+          <div class="prime"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
