--- a/index.html
+++ b/index.html
@@ -184,5 +184,22 @@
         </div>
       </div>
     </section>
+    <!-- ************mobile****************** -->
+    <section class="section-2-mobile"></section>
+    <!-- ****************section-3******************* -->
+    <section class="section-3">
+      <div class="nav-left-section-3">
+        <a href="#">Toys & Games <i class="fa-solid fa-chevron-right"></i></a>
+        <a href="#"
+          >Stuffed Animals & Plush Toys <i class="fa-solid fa-chevron-right"></i
+        ></a>
+        <a href="#">Plush Pillows</a>
+      </div>
+      <div class="nav-right-section-3">
+        <span class="sponserd"
+          >Sponserd <i class="fa-solid fa-circle-info"></i
+        ></span>
+      </div>
+    </section>
   </body>
 </html>
