--- a/index.html
+++ b/index.html
@@ -201,5 +201,36 @@
         ></span>
       </div>
     </section>
+    <!-- /*****************section-4***************/ -->
+    <section class="section-4">
+      <div class="box-section-4-1">
+        <div class="small-imges"><img src="#" alt="" />1</div>
+        <div class="small-imges"><img src="#" alt="" />2</div>
+        <div class="small-imges"><img src="#" alt="" />2</div>
+        <div class="small-imges"><img src="#" alt="" />4</div>
+        <div class="small-imges"><img src="#" alt="" />5</div>
+        <div class="small-imges"><img src="#" alt="" />6</div>
+        <div class="small-imges"><img src="#" alt="" />7</div>
+      </div>
+      <div class="box-section-4-2">box-2</div>
+      <div class="box-section-4-3">box-3</div>
+      <div class="box-section-4-4">box-4</div>
+    </section>
+    <!-- ******************section-5********************* -->
+    <section class="section-5">
+      <div class="box-section-5-1">box-1</div>
+      <div class="box-section-5-2">box-2</div>
+      <!-- <div class="box-section-5-3">box-3</div> -->
+      <!-- <div class="box-section-5-4">box-4</div>
+      <div class="box-section-5-5">box-5</div> -->
+    </section>
+    <!-- ******************section-6********************* -->
+    <section class="section-6">
+      <div class="box-section-6-1">box-6</div>
+    </section>
+    <!-- ******************section-7********************* -->
+    <section class="section-7">
+      <div class="box-section-7-1">box-7</div>
+    </section>
   </body>
 </html>
