--- a/index.html
+++ b/index.html
@@ -213,24 +213,111 @@
         <div class="small-imges"><img src="#" alt="" />7</div>
       </div>
       <div class="box-section-4-2">box-2</div>
-      <div class="box-section-4-3">box-3</div>
-      <div class="box-section-4-4">box-4</div>
+      <div class="box-section-4-3">box-3333</div>
+      <div class="box-section-4 side-bar">
+        <div class="box-section-4-4">
+          <div class="price-section-2">
+            <span class="dollar product-price"> &dollar; </span>
+            <span class="big-amount product-price"> 13</span>
+            <span class="small-amount product-price"> 99 </span>
+          </div>
+          <div class="fees-section">
+            <span class="fees"
+              >No Import Fees Deposit & $12.20 Shipping to Israel</span
+            >
+            <button class="fees-btn">
+              Details <i class="fa-solid fa-angle-down"></i>
+            </button>
+          </div>
+          <div class="delivery-info">
+            <p>
+              Delivery
+              <span class="delivery-bold-text">Tuesday, January 31</span> to
+              Israel. Order
+              <span class="delivery-time"> within 17 hrs 13 mins</span>
+            </p>
+          </div>
+          <div class="delivery-info">
+            <p>
+              Or faster delivery
+              <span class="delivery-bold-text">Monday, Januray 23</span>
+            </p>
+          </div>
+          <div class="delivery-line">
+            <span class="location-black-icon"
+              ><img src="/Assets/img/small_blakc_icon_location.pnj.PNG"
+            /></span>
+            <span class="fees-btn small-delivery">Delivery to Israel</span>
+          </div>
+          <div class="in-stock">
+            <span class="in-stock-title">In Stock.</span>
+          </div>
+          <div class="qty">
+            <button class="qty-btn">
+              Qty: 1 <i class="fa-solid fa-angle-down"></i>
+            </button>
+          </div>
+          <div class="buttons">
+            <button class="add-to-cart-btn">Add to Cart</button>
+            <button class="buy-now-btn">Buy Now</button>
+          </div>
+          <div class="secure">
+            <span class="secure-transtion fees-btn"
+              ><i class="fa-solid fa-lock"></i> Secure Transtion</span
+            >
+          </div>
+          <div class="sold-info">
+            <span class="sold-small-info"
+              >Ships from <br />
+              Sold by <br />
+              Pacaging</span
+            >
+            <span class="sold-big-info"
+              >Amazon <br />
+              <span class="peacj fees-btn">PEACJ CAT</span> <br />
+              Shows what's inside. It...</span
+            >
+          </div>
+          <div class="details">
+            <span class="peacj fees-btn details">Details</span>
+          </div>
+          <div class="more-details">
+            <p>
+              Return policy:
+              <span class="fees-btn"
+                >Eligible for Return, Refund or Replament within 30 days of
+                receipt <i class="fa-solid fa-angle-down"></i>
+              </span>
+            </p>
+          </div>
+          <div class="check-box sold-info">
+            <input type="checkbox" />
+            <span class="checkmark">Add a gift receipt for easy returns</span>
+          </div>
+          <div class="add-to-list">
+            <button class="add-to-list-item">Add to List</button>
+          </div>
+        </div>
+
+        <div class="box-section-4-5">box-5</div>
+        <div class="box-section-4-6">box-6</div>
+        <span class="sponserd photo"
+          >Sponserd <i class="fa-solid fa-circle-info"></i
+        ></span>
+      </div>
     </section>
     <!-- ******************section-5********************* -->
     <section class="section-5">
       <div class="box-section-5-1">box-1</div>
-      <div class="box-section-5-2">box-2</div>
-      <!-- <div class="box-section-5-3">box-3</div> -->
-      <!-- <div class="box-section-5-4">box-4</div>
-      <div class="box-section-5-5">box-5</div> -->
     </section>
+
     <!-- ******************section-6********************* -->
-    <section class="section-6">
+    <!-- <section class="section-6">
       <div class="box-section-6-1">box-6</div>
-    </section>
+    </section> -->
     <!-- ******************section-7********************* -->
-    <section class="section-7">
+    <!-- <section class="section-7">
       <div class="box-section-7-1">box-7</div>
-    </section>
+    </section> -->
   </body>
 </html>
