--- a/index.html
+++ b/index.html
@@ -204,21 +204,158 @@
     <!-- /*****************section-4***************/ -->
     <section class="section-4">
       <div class="box-section-4-1">
-        <div class="small-imges"><img src="#" alt="" />1</div>
-        <div class="small-imges"><img src="#" alt="" />2</div>
-        <div class="small-imges"><img src="#" alt="" />2</div>
-        <div class="small-imges"><img src="#" alt="" />4</div>
-        <div class="small-imges"><img src="#" alt="" />5</div>
-        <div class="small-imges"><img src="#" alt="" />6</div>
-        <div class="small-imges"><img src="#" alt="" />7</div>
+        <div class="small-imges"><img src="/Assets/img/left_small_photo_1_.jpg" /></div>
+        <div class="small-imges"><img src="/Assets/img/left_small_photo_2_.jpg" alt="" /></div>
+        <div class="small-imges"><img src="/Assets/img/left_small_photo_3_.jpg" alt="" /></div>
+        <div class="small-imges"><img src="/Assets/img/left_small_photo_4_.jpg" alt="" /></div>
+        <div class="small-imges"><img src="/Assets/img/left_small_photo_5_.jpg" alt="" /></div>
+        <div class="small-imges"><img src="/Assets/img/left_small_photo_6_.jpg" alt="" /></div>
+        <div class="small-imges"><img src="/Assets/img/left_small_photo_7_.jpg" alt="" /></div>
       </div>
-      <div class="box-section-4-2">box-2</div>
-      <div class="box-section-4-3">box-3333</div>
+      <div class="box-section-4-2">
+        <img src="/Assets/img/hero_photo.jpg" alt="hreo">
+        <span class="roll">Roll over img to zoom in</span>
+      </div>
+      <div class="box-section-4-3">
+        <div class="item-description">
+          <h1>
+            PEACH CAT Banana Duck Plush Toy Cute Plushie Hugging Plush Pillow
+            Duck Stuffed Animal for Girls and Boys White 19.7"
+          </h1>
+        </div>
+        <div class="visit">
+          <span class="peacj fees-btn visit-text"
+            >Visit the PEACH CAT Store</span
+          >
+        </div>
+        <div class="stars-rating">
+          <span class="strats-photo"></span>
+          <span><i class="fa-solid fa-angle-down"></i></span>
+          <span class="peacj fees-btn">287 ratings</span>
+        </div>
+        <div class="price-section-2">
+          <span class="dollar product-price"> &dollar; </span>
+          <span class="big-amount product-price"> 21</span>
+          <span class="small-amount product-price"> 99 </span>
+        </div>
+        <div class="fees-section product-text">
+          <span class="fees"
+            >No Import Fees Deposit & $12.20 Shipping to Israel</span
+          >
+          <button class="fees-btn">
+            Details <i class="fa-solid fa-angle-down"></i>
+          </button>
+        </div>
+
+        <div class="colors1">
+          <p class="fees">
+            Color: <span class="delivery-bold-text">Yellow</span>
+          </p>
+          <span><i class="fa-solid fa-chevron-up"></i></span>
+        </div>
+        <div class="items-photos">
+          <div class="photo-1">
+            <img src="/Assets/img/item_photo_4_.png" alt="item-1" />
+          </div>
+          <div class="photo-1 photo-colored-border">
+            <img src="/Assets/img/item_photo_1_.png" alt="item-1" />
+          </div>
+          <div class="photo-1">
+            <img src="/Assets/img/item_photo_2_.png" alt="item-1" />
+          </div>
+          <div class="photo-1">
+            <img src="/Assets/img/item_photo_3_.png" alt="item-1" />
+          </div>
+          <div class="photo-1">
+            <img src="/Assets/img/item_photo_5_.png" alt="item-1" />
+          </div>
+        </div>
+
+        <div class="full-prices">
+          <div>
+            <span class="price">&dollar;23.99</span>
+          </div>
+          <div>
+            <span class="price">&dollar;21.99</span>
+          </div>
+          <div>
+            <span class="price small-option"
+              >1 option<br />
+              from &dollar;15.99</span
+            >
+          </div>
+          <div>
+            <span class="price small-option"
+              >1 Option <br />from &dollar;20.99</span
+            >
+          </div>
+          <div>
+            <span class="price">&dollar;21.99</span>
+          </div>
+        </div>
+
+        <div class="colors1">
+          <p class="fees">
+            Sizes: <span class="delivery-bold-text">17.9"</span>
+          </p>
+          <span><i class="fa-solid fa-chevron-up"></i></span>
+        </div>
+
+        <div class="sizes full-prices">
+          <div class="photo-1 size-1">
+            <span class="size-span">17.99</span>
+          </div>
+          <div class="photo-1 size-1">
+            <span class="size-span">17.99</span>
+          </div>
+          <div class="photo-1 size-1">
+            <span class="size-span">17.99</span>
+          </div>
+          <div class="photo-1 size-1">
+            <span class="size-span">17.99</span>
+          </div>
+          <div class="photo-1 size-1">
+            <span class="size-span">17.99</span>
+          </div>
+        </div>
+        <div class="brand">
+          <div class="brand-1">
+            <span>Brand<br>
+            Animal theme<br>
+            Theme<br>
+            Toy figure type<br>
+            Color</span>
+          </div>
+          <div class="brand-2">
+            <span>PEACH CAT<br>
+            Duck<br>
+            Banana Duck Plush Pillow<br>
+            Stuffed Toy<br>
+            White</span>
+          </div>
+          </div>
+          <div class="about">
+              <div>
+                <span class="about-title">About this item</span>
+              </div>
+              <div class="list">
+                <ul>
+                  <li>Comfortable Elastic Plush Toy: This kawaii banana duck plush pillow is crafted from premium soft plush fabric and with high quality PP cotton.</li>
+                  <li>Size of Cute Plushie: The height of the plush toy is 19.7". This hugging plush pillow is good size to hold it. Suitable for home and office.
+                  </li>
+                  <li>Application: This banana toy is very comfortable to hold, and leaning on the sofa or bed is also a good choice. It has a lovely duck face and feet and is a good and warm company.</li>
+                  <li>As Gift: This cute stuffed duck, which can be as a kawaii banana plush pillow for reading, watching TV, studying and taking a nap. It can be used to support your lumbar. It will be a sweet gift for Christmas, Thanksgiving and birthday.</li>
+                  <li>Package: One stuffed animal pillow. Every product has been individually tested. If you have any problem with our product, please contact us.</li>
+                </ul>
+              </div>
+          </div>
+        </div>
+      </div>
       <div class="box-section-4 side-bar">
         <div class="box-section-4-4">
           <div class="price-section-2">
             <span class="dollar product-price"> &dollar; </span>
-            <span class="big-amount product-price"> 13</span>
+            <span class="big-amount product-price"> 21</span>
             <span class="small-amount product-price"> 99 </span>
           </div>
           <div class="fees-section">
@@ -299,8 +436,32 @@
           </div>
         </div>
 
-        <div class="box-section-4-5">box-5</div>
-        <div class="box-section-4-6">box-6</div>
+        <div class="box-section-4-5">
+          <div class="sell">
+            <span class="sell-title">Have one to sell?</span>
+            <button class="sell-btn">Sell on Amazon</button>
+          </div>
+        </div>
+        <div class="box-section-4-6">
+          <div class="img-mash">
+            <img src="/Assets/img/mashroom_photo_.jpg">
+          </div>
+          <div class="content">
+            <span class="content-text">ZGXIONG Mushroom Plush Pillows, Cute Plush Toys, Stuffed Animals fo...</span>
+            <img src="/Assets/img/strass_mashhroom.png">
+          </div>
+            <div class="left-section-2 mashroon-price">
+              <div class="price-section-2">
+                <span class="dollar"> &dollar; </span>
+                <span class="big-amount">6</span>
+                <span class="small-amount"> 99 </span>
+              </div>
+              <div class="prime-logo-section-2">
+                <div class="prime"></div>
+              </div>
+            </div>
+          
+        </div>
         <span class="sponserd photo"
           >Sponserd <i class="fa-solid fa-circle-info"></i
         ></span>
