--- a/index.html
+++ b/index.html
@@ -469,16 +469,50 @@
     </section>
     <!-- ******************section-5********************* -->
     <section class="section-5">
-      <div class="box-section-5-1">box-1</div>
-    </section>
+      <div class="box-section-5-1">
+      <div class="buy-it-with">
+        <span class="title-but-it-with">Buy it with</span>
+      </div>
+      <div class="a1">
+        <div class="a2">
+          <img src="/Assets/img/items_on_sale.png">
+        </div>
+        <div class="a3">
+          <span class="price-sale">Total price:<span class="total-price"> $63.97</span> </span>
+          <button class="btn-add-items">Add all three to cart</button>
+        </div>
+      </div>
+      <div>
+        <spann class="info-items-sale"><i class="fa-solid fa-circle-info"></i>
+          Some of these items ship sooner than the others. <span class="peacj fees-btn details">show more</span>
+        </spann>
+      </div>
 
-    <!-- ******************section-6********************* -->
-    <!-- <section class="section-6">
-      <div class="box-section-6-1">box-6</div>
-    </section> -->
-    <!-- ******************section-7********************* -->
-    <!-- <section class="section-7">
-      <div class="box-section-7-1">box-7</div>
-    </section> -->
+      <div class="check-box-last">
+
+        <input type="checkbox"/>
+        <span class="checkmark fees-btn">This item: PEACH CAT Banana Duck Plush Toy Cute Plushie Hugging Plush Pillow Duck Stuffed Animal for Girls and Boys White 19.7"
+          <span class="total-price">$21.99</span></span><br>
+          <input type="checkbox"/>
+        <span class="checkmark fees-btn">
+          
+            Mewaii 8” Mushroom Plush, Strawberry Cow Plush Pillow Soft Plushies Squishy Pillow, Cute Stuffed Animals Kawaii Plush Toys Throw Pillow Decoration Gift for Girls Boys
+            <span class="total-price">$16.99</span><br>
+          </span>
+          <input type="checkbox"/>
+        <span class="checkmark fees-btn">
+          Cuddle Barn PlushGoals - Wawa The Prince Super Soft Cute Kawaii Froggie Collectible Stuffed Animal Plush Toy, 9 inches
+          <span class="total-price">$24.99</span>
+          </span>
+
+      </div>
+
+
+
+
+
+
+      </div>
+    </section>
   </body>
 </html>
