--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <!-- /*****************section-4***************/ -->
     <section class="section-4">
       <div class="box-section-4-1">
-        <div class="small-imges"><img src="/Assets/img/left_small_photo_1_.jpg" /></div>
+        <div class="orange-box-1"><img src="/Assets/img/left_small_photo_1_.jpg" /></div>
         <div class="small-imges"><img src="/Assets/img/left_small_photo_2_.jpg" alt="" /></div>
         <div class="small-imges"><img src="/Assets/img/left_small_photo_3_.jpg" alt="" /></div>
         <div class="small-imges"><img src="/Assets/img/left_small_photo_4_.jpg" alt="" /></div>
@@ -302,21 +302,19 @@
         </div>
 
         <div class="sizes full-prices">
-          <div class="photo-1 size-1">
-            <span class="size-span">17.99</span>
+          <div class="photo-1 size-1 orange-box">
+            <span class="size-span">19.7"</span>
           </div>
           <div class="photo-1 size-1">
-            <span class="size-span">17.99</span>
+            <span class="size-span">12"</span>
           </div>
           <div class="photo-1 size-1">
-            <span class="size-span">17.99</span>
+            <span class="size-span">27.5"</span>
           </div>
           <div class="photo-1 size-1">
-            <span class="size-span">17.99</span>
+            <span class="size-span">35.4"</span>
           </div>
-          <div class="photo-1 size-1">
-            <span class="size-span">17.99</span>
-          </div>
+          
         </div>
         <div class="brand">
           <div class="brand-1">
@@ -335,7 +333,7 @@
           </div>
           </div>
           <div class="about">
-              <div>
+              <div class="about-title-div">
                 <span class="about-title">About this item</span>
               </div>
               <div class="list">
@@ -487,9 +485,7 @@
           Some of these items ship sooner than the others. <span class="peacj fees-btn details">show more</span>
         </spann>
       </div>
-
       <div class="check-box-last">
-
         <input type="checkbox"/>
         <span class="checkmark fees-btn">This item: PEACH CAT Banana Duck Plush Toy Cute Plushie Hugging Plush Pillow Duck Stuffed Animal for Girls and Boys White 19.7"
           <span class="total-price">$21.99</span></span><br>
@@ -504,14 +500,7 @@
           Cuddle Barn PlushGoals - Wawa The Prince Super Soft Cute Kawaii Froggie Collectible Stuffed Animal Plush Toy, 9 inches
           <span class="total-price">$24.99</span>
           </span>
-
       </div>
-
-
-
-
-
-
       </div>
     </section>
   </body>
