--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/ca5395b5d3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/script.js"></script>
     <link rel="stylesheet" href="desktop.css" />
     <link rel="stylesheet" href="mobile.css" />
     <title>Document</title>
