--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <span class="info-large"> & Orders</span>
         </div>
         <div class="box-2 cart">
-          <span class="item-number">0</span>
+          <span class="item-number" id="items-add-to-cart">0</span>
           <div class="cart-icon"></div>
           <span class="info-cart-bottom">Cart</span>
         </div>
@@ -385,7 +385,7 @@
             </button>
           </div>
           <div class="buttons">
-            <button class="add-to-cart-btn">Add to Cart</button>
+            <button class="add-to-cart-btn" id="btn-click">Add to Cart</button>
             <button class="buy-now-btn">Buy Now</button>
           </div>
           <div class="secure">
